Support for startup animation.  Moved artwork to data.  Improved m3u file parsing.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,7 @@
       <h1>JellyJam NFC Player</h1>
       <nav>
         <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('display_page') }}">Display</a>
         <a href="{{ url_for('spotify_config') }}">Spotify</a>
         <a href="{{ url_for('mappings') }}">Mappings</a>
         <a href="{{ url_for('simulate') }}">Simulate</a>
